fix overflowing partner images

--- a/ckanext/justicehub_theme/public/justicehub_theme.css
+++ b/ckanext/justicehub_theme/public/justicehub_theme.css
@@ -7,6 +7,8 @@
 }
 .image-box img.media-image {
     margin:auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 .context-info .image a {
     width: 150px;
