--- a/ckanext/justicehub_theme/public/partner.css
+++ b/ckanext/justicehub_theme/public/partner.css
@@ -4,7 +4,8 @@
     border: none;
 }
 .media-item {
-    width:200px;
+    width:210px;
+    margin-left: 24px;
 }
 .count,
 .media-item .media-heading {
